test/good/loops/for16.px

for t in 'z'...'a' by -6, 1..3 by 2 do
    print t
